--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
-/* Add application styles & imports to this file! */
+/* You can add global styles to this file, and also import other style files */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #202532;
+  height: 900px;
+}
+
+*[contentEditable="true"]:empty::after {
+  content: attr(placeholder);
+}
+
+ul {
+  list-style: none;
+}
+
+hr {
+  margin: 3px 0 3px 0;
+  width: 100%;
+  color: #aaa;
+  border-style: dashed;
+}
