--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -4,7 +4,7 @@
       <div class="post-op">
         <ul>
           <li (click)="eliminaPost(i)">&times;</li>
-          <li class="tag tag-info" *ngIf="post.importante == true">Importante</li>
+          <li class="tag tag-info" *ngIf="post.importante == 1">Importante</li>
         </ul>
       </div> <!-- fine post-op -->
       <div class="post-title">{{post.titolo}}</div>
@@ -24,8 +24,8 @@
               <div class="post-radio">
                 importante?
                 <select #importante>
-             <option value="true" selected>Sì</option>
-             <option value="false">No</option>
+             <option value="1" selected>Sì</option>
+             <option value="0">No</option>
            </select>
               </div>
             </li>
